concord_macros/tests/trybuild/fail/codegen/multipart_endpoint_execute_websocket.stderr
error[E0599]: the method `execute_websocket` exists for struct `PendingRequest<'_, MultipartEndpointExecuteWebSocketApiCx, EpDownloadHd3386a2ef42e80b9, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/multipart_endpoint_execute_websocket.rs:16:28
   |
 5 | / api! {
 6 | |     client MultipartEndpointExecuteWebSocketApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Download
   | |________________- doesn't satisfy `_: WebSocketEndpoint<MultipartEndpointExecuteWebSocketApiCx>`
...
16 |       let _ = api.download().execute_websocket().await.unwrap();
   |                              ^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpDownloadHd3386a2ef42e80b9: WebSocketEndpoint<MultipartEndpointExecuteWebSocketApiCx>`
note: the trait `WebSocketEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait WebSocketEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
